attempting to fix alignment in edge

--- a/main.css
+++ b/main.css
@@ -183,7 +183,7 @@ Clearfix
 
 .group {
     clear:both;
-    *zoom: 1;
+    zoom: 1;
 }
 
 /*
@@ -272,6 +272,8 @@ img.frontend {
 .tagline {
     margin: 9.205020920502092vh 0 3.0683403068340307vh 2.063273727647868vw;
     text-align: right;
+    -ms-text-align-last: right;
+    text-align-last: right;
 }
 
 .primary-nav {
